--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,10 @@
         <h1>🔍 Let’s Find the Right Takaful for You!</h1>
         <p>This is where we help you choose the most suitable PruBSN Health Takaful Plan.</p>
         <p>Fill in your details and we shall recommend you the best-match plan for you!</p>
-        <a href="{{ url_for('start') }}" class="start-button">🚀 Start Now</a>
+
+        <!-- ✅ Link to Login Page -->
+        <a href="login.html" class="start-button">🔐 Login to Continue</a>
     </div>
 </body>
 </html>
+
