--- a/templates/register.html
+++ b/templates/register.html
@@ -46,11 +46,11 @@
 <body>
     <div class="container">
         <h2>📝 Create Your Account</h2>
-        <form action="/register" method="POST">
+        <!-- 🔁 CHANGE MADE HERE -->
+        <form action="login.html" method="GET">
             <input type="text" name="fullname" placeholder="Full Name" required><br>
             <input type="email" name="email" placeholder="Email Address" required><br>
-            <input type="password" name="password"
-placeholder="Password" required><br>
+            <input type="password" name="password" placeholder="Password" required><br>
             <input type="password" name="confirm_password" placeholder="Confirm Password" required><br>
             <button class="register-button" type="submit">Register</button>
         </form>
