--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,8 @@
 <body>
     <div class="container">
         <h2>🔐 Login to Your Account</h2>
-        <form action="/login" method="POST">
+        <!-- ✅ CHANGE MADE HERE -->
+        <form action="start.html" method="GET">
             <input type="email" name="email" placeholder="Email" required><br>
             <input type="password" name="password" placeholder="Password" required><br>
             <button class="login-button" type="submit">Login</button>
@@ -53,3 +54,4 @@
     </div>
 </body>
 </html>
+
