--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
         <p>Fill in your details and we shall recommend you the best-match plan for you!</p>
 
         <!-- ✅ Link to Login Page -->
-        <a href="login.html" class="start-button">🔐 Login to Continue</a>
+        <a href="{{ url_for('login') }}" class="start-button">🔐 Login to Continue</a>
     </div>
 </body>
 </html>
