--- a/templates/login.html
+++ b/templates/login.html
@@ -40,18 +40,35 @@
         .login-button:hover {
             background-color: #084298;
         }
+        .register-link {
+            display: block;
+            margin-top: 20px;
+            font-size: 14px;
+        }
+        .register-link a {
+            color: #0d6efd;
+            text-decoration: none;
+        }
+        .register-link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h2>🔐 Login to Your Account</h2>
-        <!-- ✅ CHANGE MADE HERE -->
-        <form action="start.html" method="GET">
-            <input type="email" name="email" placeholder="Email" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
-            <button class="login-button" type="submit">Login</button>
-        </form>
+        <form action="{{ url_for('login') }}" method="POST">
+    <input type="email" name="email" placeholder="Email" required><br>
+    <input type="password" name="password" placeholder="Password" required><br>
+    <button class="login-button" type="submit">Login</button>
+</form>
+
+
+        <div class="register-link">
+            Don't have an account? <a href="{{ url_for('register') }}">Register here</a>
+        </div>
     </div>
 </body>
 </html>
+
 
