serena + laila merged

--- a/templates/all-packages.html
+++ b/templates/all-packages.html
@@ -80,7 +80,7 @@
 <body>
 
 <nav>
-  <div style="font-weight: 600; font-size: 18px; color: #0d6efd;">🧭 Takaful Advisor</div>
+  <div style="font-weight: 600; font-size: 18px; color: #0d6efd;">🧭 SureMatch</div>
   <div>
     <a href="{{ url_for('package') }}">🧠 Customized for You</a>
     <a href="{{ url_for('all_packages') }}" class="active">📦 View All Packages</a>
