--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🔍 Let’s Find the Right Takaful for You!</h1>
+        <h1>🔍 Welcome to SureMatch! Let’s Find the Right Takaful Plan for You!</h1>
         <p>This is where we help you choose the most suitable PruBSN Health Takaful Plan.</p>
         <p>Fill in your details and we shall recommend you the best-match plan for you!</p>
 
