--- a/templates/start.html
+++ b/templates/start.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Start - Takaful Expert System</title>
+    <title>Start - SureMatch</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
