--- a/templates/all-packages.html
+++ b/templates/all-packages.html
@@ -75,6 +75,10 @@
       font-weight: bold;
       text-decoration: underline;
     }
+
+    nav a.logout {
+      color: #dc3545;
+    }
   </style>
 </head>
 <body>
